--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en_US">
 <head>
   <meta charset="UTF-8"> 
-<title>SabzLearn | Js Projects | 02</title>
+<title>SpongeBob-LoginForm</title>
 <link href="style.css" rel="stylesheet">
 
 </head>
